Expose OpenVR controllers to the action map system

--- a/Code/CryPlugins/VR/CryOpenVR/Module/CMakeLists.txt
+++ b/Code/CryPlugins/VR/CryOpenVR/Module/CMakeLists.txt
@@ -13,6 +13,8 @@ add_sources("CryOpenVR_uber_0.cpp"
 		"PluginDll.h"
 		"OpenVRController.cpp"
 		"OpenVRController.h"
+		"OpenVRControllerDevice.cpp"
+		"OpenVRControllerDevice.h"
 		"OpenVRDevice.cpp"
 		"OpenVRDevice.h"
 		"OpenVRResources.cpp"
