Add CMake options for disabling DRS, AI and the sensor plug-in

--- a/Code/CryPlugins/CMakeLists.txt
+++ b/Code/CryPlugins/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Mandatory plugin, contains entities required by the engine
 if (OPTION_ENGINE)
 	add_subdirectory (CryDefaultEntities/Module)
+endif()
+
+if (PLUGIN_SENSORSYSTEM)
 	add_subdirectory(CrySensorSystem/Module)
 endif()
 
